--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     .chart-container {
       flex: 1;
       position: relative;
-      padding: 0 20px 20px 20px;
+      padding: 0 20px;
+      min-height: 0;
     }
     
     .quiz-screen {
