--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="login-screen">
         <div class="logo">10:13</div>
-        <div class="version">v5</div>
+        <!-- UPDATE VERSION NUMBER HERE when artifact changes -->
+        <div class="version">v9</div>
         <button class="btn" onclick="handleGoogleLogin()">sign in with google</button>
     </div>
 
