--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div id="loginScreen" class="login-screen">
         <div class="logo">10:13</div>
         <!-- UPDATE VERSION NUMBER HERE when artifact changes -->
-        <div class="version">v15</div>
+        <div class="version">v16</div>
         <button class="btn" onclick="handleGoogleLogin()">sign in with google</button>
     </div>
 
@@ -929,8 +929,8 @@
                             borderColor: '#00FFFF',
                             backgroundColor: '#00FFFF',
                             borderWidth: 3,
-                            pointRadius: 6,
-                            pointHoverRadius: 8,
+                            pointRadius: 4,
+                            pointHoverRadius: 6,
                             tension: 0.1
                         },
                         {
@@ -939,8 +939,8 @@
                             borderColor: '#FF00FF',
                             backgroundColor: '#FF00FF',
                             borderWidth: 3,
-                            pointRadius: 6,
-                            pointHoverRadius: 8,
+                            pointRadius: 4,
+                            pointHoverRadius: 6,
                             tension: 0.1
                         },
                         {
@@ -949,8 +949,8 @@
                             borderColor: '#FFFF00',
                             backgroundColor: '#FFFF00',
                             borderWidth: 3,
-                            pointRadius: 6,
-                            pointHoverRadius: 8,
+                            pointRadius: 4,
+                            pointHoverRadius: 6,
                             tension: 0.1
                         },
                         {
@@ -959,8 +959,8 @@
                             borderColor: '#FFFFFF',
                             backgroundColor: '#FFFFFF',
                             borderWidth: 3,
-                            pointRadius: 6,
-                            pointHoverRadius: 8,
+                            pointRadius: 4,
+                            pointHoverRadius: 6,
                             tension: 0.1,
                             spanGaps: false
                         }
@@ -983,12 +983,18 @@
                     },
                     scales: {
                         y: {
-                            min: 0,
-                            max: 100,
+                            min: -5,
+                            max: 105,
                             ticks: {
                                 color: '#FFFFFF',
                                 font: {
                                     size: 10
+                                },
+                                callback: function(value) {
+                                    if (value === 0 || value === 25 || value === 50 || value === 75 || value === 100) {
+                                        return value;
+                                    }
+                                    return '';
                                 }
                             },
                             grid: {
@@ -1001,7 +1007,7 @@
                                 unit: 'hour',
                                 stepSize: 6,
                                 displayFormats: {
-                                    hour: 'MMM d ha'
+                                    hour: 'M-d-yy'
                                 },
                                 tooltipFormat: 'MMM d, h:mm a'
                             },
