--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@
         // ============================================
         // APP CONFIGURATION
         // ============================================
-        const CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID_HERE';  // ← REPLACE THIS
-        const SPREADSHEET_ID = 'YOUR_SPREADSHEET_ID_HERE';  // ← REPLACE THIS
+        const CLIENT_ID = '785091900263-bqe75ticj4pr0uovtb1b0c5d8ogpnvm8.apps.googleusercontent.com';  // ← REPLACE THIS
+        const SPREADSHEET_ID = '1HelegJqWzHBK-mTqc6mYlGI3OrgBP8Ge8Vw6BbL7Z5Q';  // ← REPLACE THIS
         const SCOPES = 'https://www.googleapis.com/auth/spreadsheets';
 
         const COLOR_MAP = {
